<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingVertical="14dp">

    <TextView
        android:id="@+id/user_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator_1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msmccoy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_type_text" />

    <Button
        android:id="@+id/delete_user_button"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:text="@string/delete"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/username_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_type_text" />

</androidx.constraintlayout.widget.ConstraintLayout>