<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingHorizontal="32dp"
    android:paddingVertical="50dp"
    tools:context=".ui.operator2.SecondOperatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/param1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/param1"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/param1_edit_text"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:hint="@string/param1"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/param1_text" />

        <TextView
            android:id="@+id/param2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/param2"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/param1_edit_text" />

        <EditText
            android:id="@+id/param2_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:hint="@string/param2"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/param2_text" />

        <TextView
            android:id="@+id/param3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/param3"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/param2_edit_text" />

        <EditText
            android:id="@+id/param3_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:hint="@string/param3"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/param3_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/save_and_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:paddingVertical="12dp"
        android:text="@string/save_and_send"
        android:textSize="18sp" />

</FrameLayout>