<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    tools:context=".ui.users.UsersFragment">

    <TextView
        android:id="@+id/params_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/existed_users_accounts"
        android:textColor="#99000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/params_title"
        tools:itemCount="3"
        tools:listitem="@layout/existing_user" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/users_list" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="14dp"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <LinearLayout
            android:id="@+id/edits_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                tools:ignore="TextFields" />

        </LinearLayout>

        <Spinner
            android:id="@+id/user_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="@id/edits_layout"
            app:layout_constraintEnd_toStartOf="@id/create_user_button"
            app:layout_constraintStart_toEndOf="@id/edits_layout"
            app:layout_constraintTop_toTopOf="@id/edits_layout" />

        <Button
            android:id="@+id/create_user_button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/Create"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/edits_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/edits_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/create_user_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/queries_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        tools:itemCount="3"
        tools:listitem="@layout/query_item" />

</androidx.constraintlayout.widget.ConstraintLayout>